implemmentacao do JWT com OAUTH2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.port=9000
+
+security.jwt.expiracao=30
+security.jwt.chave-assinatura=Y2FybmVpcm8gaW5zcGVjb2VzLCBvIG1lbGhvciBubyBxdWUgZmF6
