--- a/pom.xml
+++ b/pom.xml
@@ -28,14 +28,19 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>2.4.3</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<!--Security-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
 		</dependency>
 		<!--Testes-->
 		<dependency>
